--- a/suggestify/src/App.css
+++ b/suggestify/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #141414;
   min-height: 10vh;
   display: flex;
   flex-direction: column;
@@ -22,6 +22,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  text-shadow: 0 0 10px #81b71a;
 }
 
 .App-link {
